--- a/Librarys/Commonlibs/build.gradle
+++ b/Librarys/Commonlibs/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
-/*//lib和app切换，要添加这个
-apply plugin: 'com.jakewharton.butterknife'*/
+//lib和app切换，要添加这个
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -37,8 +37,10 @@ dependencies {
     compile project(':Components:permissions')
     compile project(':Components:materialdialog')
     compile project(':Components:bugly_crashreport_upgrade')
-
     //更好的使用fragment
     compile 'me.yokeyword:fragmentation-swipeback:0.10.4'
     compile 'me.yokeyword:fragmentation:0.10.7'
+    compile project(':Components:toolbar')
+    //控件注解(凡是用到的地方都要这个注解)
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
