--- a/Modules/usermodule/src/main/AndroidManifest.xml
+++ b/Modules/usermodule/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dashi.fracesuit.usermodule">
 
@@ -5,9 +6,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-
-        <activity android:name=".modules.user.UserActivity"></activity>
-
+        <activity android:name=".modules.user.UserActivity" />
     </application>
 
 </manifest>
