--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':Librarys:Commonlibs', ':Components:materialdialog', ':Components:hotfix2',
+include ':app', ':Librarys:Commonlibs', ':Components:materialdialog', ':Components:hotfix2', ':Components:toolbar',
         ':Components:rxjava1x',
         ':Components:retrofit2',
         ':Components:logger',
