--- a/Modules/usermodule/src/main/AndroidManifest.xml
+++ b/Modules/usermodule/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity android:name=".modules.user.UserActivity" />
+      <!--  <activity android:name=".modules.trouble.TroubleActivity" />-->
     </application>
 
 </manifest>
